--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <img class="hi" src="https://media3.giphy.com/media/3ohhwr9fxNhozYRhLy/giphy.gif?cid=ecf05e47ulcdicldaafy60ph5398kup8gen65hg6w6rvovfw&rid=giphy.gif&ct=s" alt="hi-img">
       <h3>Hope you like my personal website so far. I look forward to get in touch with you!</h3>
       <p class="contact-message">To convey me your feedback/compliment/grievence regarding this website, hit the "CONTACT ME" button right below this line.</p>
-      <a class="btn" href="mailto:shreeumbarkar16@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:shreeumbarkar16@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
